# molecule-net

./: .gitignore  README.md  lint.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
src/gaia/: dummy_module.py
src/molecule_net/pipelines/: geometric_deep_learning_pipeline.py
tests/: test_dummy_module.py
